update thêm khách hàng ở bán hang off cuongtt22